--- a/packages/gameserver/package.json
+++ b/packages/gameserver/package.json
@@ -63,7 +63,7 @@
     "@feathersjs/socketio": "5.0.0-pre.4",
     "@feathersjs/socketio-client": "5.0.0-pre.4",
     "@feathersjs/transport-commons": "5.0.0-pre.4",
-    "@google-cloud/agones-sdk": "1.15.0",
+    "@google-cloud/agones-sdk": "1.14.0",
     "@xrengine/engine": "^0.2.27",
     "@xrengine/server-core": "^0.2.27",
     "aws-sdk": "2.925.0",
@@ -78,7 +78,7 @@
     "feathers-hooks-common": "5.0.6",
     "feathers-logger": "0.3.2",
     "feathers-mailer": "3.0.1",
-    "feathers-seeder": "2.0.0",
+    "feathers-seeder": "^1.0.10",
     "feathers-sequelize": "https://github.com/feathersjs-ecosystem/feathers-sequelize.git",
     "feathers-swagger": "1.2.1",
     "feathers-sync": "https://github.com/xrfoundation/feathers-sync.git",
@@ -93,7 +93,7 @@
     "multer": "1.4.2",
     "nanoid": "3.1.23",
     "node-fetch": "2.6.1",
-    "nodemailer-smtp-transport": "2.7.4",
+    "nodemailer-smtp-transport": "^2.4.2",
     "nodemon": "2.0.7",
     "ps-list": "7.2.0",
     "pug": "3.0.2",
