--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -66,7 +66,7 @@
     "@feathersjs/socketio": "5.0.0-pre.4",
     "@feathersjs/socketio-client": "^5.0.0-pre.3",
     "@feathersjs/transport-commons": "^5.0.0-pre.3",
-    "@google-cloud/agones-sdk": "^1.7.0",
+    "@google-cloud/agones-sdk": "1.14.0",
     "@xrengine/common": "^0.2.27",
     "@xrengine/engine": "^0.2.27",
     "aws-sdk": "^2.811.0",
@@ -89,7 +89,7 @@
     "multer": "^1.4.2",
     "nanoid": "^3.1.5",
     "node-fetch": "^2.6.0",
-    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemailer-smtp-transport": "^2.4.2",
     "pug": "^3.0.0",
     "require-main-filename": "^2.0.0",
     "s3-blob-store": "^4.1.1",
