--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -101,10 +101,10 @@
     "mysql2": "2.2.5",
     "nanoid": "3.1.23",
     "node-fetch": "2.6.1",
-    "nodemailer-smtp-transport": "2.7.4",
+    "nodemailer-smtp-transport": "^2.4.2",
     "ps-list": "7.2.0",
     "pug": "3.0.2",
-    "regenerator-runtime": "0.13.7",
+    "regenerator-runtime": "^0.13.7",
     "request": "2.88.2",
     "require-main-filename": "2.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
