--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -39,10 +39,10 @@
     "app-root-path": "3.0.0",
     "device-detector-js": "2.2.9",
     "prop-types": "15.7.2",
-    "react": "17.0.2",
+    "react": "^17.0.0",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
-    "react-video-recorder": "3.18.1",
+    "react-video-recorder": "^3.17.1",
     "redux": "4.1.0",
     "sass": "1.34.1",
     "styled-components": "5.3.0",
