Updated chart to optionally get release name from config value.
In making gameservers pre-load locations, it was discovered that deploying
a GS fleet just for a single location wouldn't work since the redis connections
assumed that the redis deployment shared a release name, e.g. 'dev' connects to
'dev-redis'. Having another deployment 'rooftop' for rooftop GSes would try to
connect to 'rooftop-redis'.

Updated deployment files to define the releaseName from config value
.Values.release.name, and all sourcing from .Release.Name now references this
variable. If .Values.release does not exist, releaseName definition will fall
back to .Release.Name.

Fixed an errant reference to .Values.api.enabled in gameserver configmap.

--- a/packages/ops/xrengine/templates/client-deployment.yaml
+++ b/packages/ops/xrengine/templates/client-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       serviceAccountName: {{ include "xrengine.client.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.client.podSecurityContext | nindent 8 }}
+      {{- $releaseName := .Release.Name }}
+      {{ if not (empty .Values.release) }}
+      {{- $releaseName = .Values.release.name | default .Release.Name }}
+      {{ end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -40,7 +44,7 @@ spec:
             - name: KUBERNETES
               value: "true"
             - name: RELEASE_NAME
-              value: {{ .Release.Name }}
+              value: {{ $releaseName }}
           ports:
             - name: http
               containerPort: 3000
