--- a/packages/ops/xrengine/templates/api-server-deployment.yaml
+++ b/packages/ops/xrengine/templates/api-server-deployment.yaml
@@ -24,6 +24,10 @@ spec:
       serviceAccountName: {{ include "xrengine.api.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.api.podSecurityContext | nindent 8 }}
+      {{- $releaseName := .Release.Name }}
+      {{ if not (empty .Values.release) }}
+      {{- $releaseName = .Values.release.name | default .Release.Name }}
+      {{ end }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -61,16 +65,16 @@ spec:
             - name: REDIS_ENABLED
               value: "true"
             - name: REDIS_ADDRESS
-              value: "$({{ .Release.Name | upper }}_REDIS_MASTER_SERVICE_HOST)"
+              value: "$({{ $releaseName | upper }}_REDIS_MASTER_SERVICE_HOST)"
             - name: REDIS_PORT
-              value: "$({{ .Release.Name | upper }}_REDIS_MASTER_SERVICE_PORT)"
+              value: "$({{ $releaseName | upper }}_REDIS_MASTER_SERVICE_PORT)"
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-redis
+                  name: {{ $releaseName }}-redis
                   key: redis-password
             - name: RELEASE_NAME
-              value: {{ .Release.Name }}
+              value: {{ $releaseName }}
           ports:
             - name: http
               containerPort: 3030
@@ -93,13 +97,13 @@ spec:
           command: [ 'sh', '-c', 'until (printf "AUTH $REDIS_PASSWORD\r\nPING\r\n";) | nc $REDIS_ADDRESS $REDIS_PORT ; do echo waiting for redis-master; sleep 2; done' ]
           env:
             - name: REDIS_ADDRESS
-              value: "$({{ .Release.Name | upper }}_REDIS_MASTER_SERVICE_HOST)"
+              value: "$({{ $releaseName | upper }}_REDIS_MASTER_SERVICE_HOST)"
             - name: REDIS_PORT
-              value: "$({{ .Release.Name | upper }}_REDIS_MASTER_SERVICE_PORT)"
+              value: "$({{ $releaseName | upper }}_REDIS_MASTER_SERVICE_PORT)"
             - name: REDIS_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: {{ .Release.Name }}-redis
+                  name: {{ $releaseName }}-redis
                   key: redis-password
       {{- with .Values.api.nodeSelector }}
       nodeSelector:
