Cleanup touch input (#2079)
- Added `touchDetected` to devicedetect state, and cleaned up touch input. Fixes touch input on iPad.
- Moved device detection logic (and device-detector-js dep) into client-core / getDeviceInfo action creator to dedupe device detection logic
- Renamed MobileGamepad -> TouchGamepad
- Fixes Touch Input on iPad Pro

--- a/packages/client-core/package.json
+++ b/packages/client-core/package.json
@@ -49,6 +49,7 @@
     "@typescript-eslint/parser": "4.27.0",
     "@xrengine/common": "^0.2.27",
     "@xrengine/engine": "^0.2.27",
+    "device-detector-js": "2.2.9",
     "antd": "4.16.3",
     "app-root-path": "3.0.0",
     "autobind-decorator": "2.4.0",
