--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
+    "start": "cross-env NODE_OPTIONS=--max_old_space_size=8192 docusaurus start",
     "build": "cross-env NODE_OPTIONS=--max_old_space_size=8192 docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -54,6 +54,6 @@
     "docusaurus-plugin-typedoc": "0.14.2",
     "typedoc": "0.20.36",
     "typedoc-plugin-markdown": "3.9.0",
-    "typescript": "4.3.2"
+    "typescript": "4.2"
   }
 }
