--- a/packages/engine/tsconfig.json
+++ b/packages/engine/tsconfig.json
@@ -14,6 +14,7 @@
     "allowJs": false,
     "noImplicitThis": false,
     "skipLibCheck": true,
+    "trailingCommas": false,
     "outDir": "dist",
     "rootDir": "src",
     "types": ["node", "jest"],
