--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -54,7 +54,10 @@
     "three-mesh-bvh": "^0.3.7",
     "three-physx": "^0.0.33",
     "vite-xrengine": "2.2.4",
-    "volumetric": "^0.2.19"
+    "volumetric": "^0.2.19",
+    "ethereal": "^2.0.3",
+    "react": "17.0.2",
+    "styled-components": "5.3.0"
   },
   "devDependencies": {
     "@rollup/plugin-json": "4.1.0",
