--- a/package.json
+++ b/package.json
@@ -47,11 +47,15 @@
     "test": "jest",
     "lint": "lerna run --ignore @xrengine/bot lint",
     "version-increment": "lerna version --conventional-commits --yes",
+    "version-increment-no-tag": "lerna version --conventional-commits --yes --no-git-tag-version",
     "publish": "lerna publish from-package --yes",
+    "publish-no-verify": "lerna publish from-package --yes --no-verify-access --ignore-scripts",
+    "publish-github": "lerna publish from-package --yes --no-verify-access --ignore-scripts --registry https://npm.pkg.github.com",
     "validate": "lerna run validate",
     "build": "lerna run build --parallel",
     "build-publish": "lerna run --ignore @xrengine/client-ml --ignore @xrengine/docs --ignore @xrengine/social --ignore @xrengine/client --ignore @xrengine/server build-publish --parallel",
     "build-docker": "lerna run --ignore @xrengine/bot --ignore @xrengine/client-ml --ignore @xrengine/docs --ignore @xrengine/engine build --parallel",
+    "update-name-gh-package": "lerna run update-name-gh-package",
     "diff": "lerna diff"
   },
   "types": "lib/",
