--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@capacitor/android": "3.0.1",
     "@capacitor/cli": "3.0.1",
+    "@capacitor/ios": "^3.0.2",
     "@material-ui/core": "4.11.4",
     "@types/react-redux": "7.1.16",
     "@xrengine/client-core": "^0.2.29",
@@ -38,7 +39,7 @@
     "@xrengine/engine": "^0.2.29",
     "app-root-path": "3.0.0",
     "prop-types": "15.7.2",
-    "react": "17.0.2",
+    "react": "^17.0.0",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-video-recorder": "3.18.2",
