Fix podfile dependencies

--- a/packages/social/ios/App/Podfile
+++ b/packages/social/ios/App/Podfile
@@ -7,9 +7,9 @@ use_frameworks!
 install! 'cocoapods', :disable_input_output_paths => true
 
 def capacitor_pods
-  pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
-  pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
-  pod 'WebxrNative', :path => '../../node_modules/webxr-native'
+  pod 'Capacitor', :path => '../../../../node_modules/@capacitor/ios'
+  pod 'CapacitorCordova', :path => '../../../../node_modules/@capacitor/ios'
+  pod 'WebXRNative', :path => '../../../../node_modules/webxr-native'
 end
 
 target 'App' do
