--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -46,6 +46,7 @@
     "redux": "4.1.0",
     "sass": "1.35.1",
     "styled-components": "5.3.0",
+    "volumetric": "^0.2.21",
     "webxr-native": "0.2.21"
   },
   "devDependencies": {
