--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,7 +18,8 @@
     "@docusaurus/preset-classic": "2.0.0-beta.2",
     "@mdx-js/react": "1.6.22",
     "clsx": "1.1.1",
-    "react": "17.0.2",
+    "docusaurus": "^1.14.7",
+    "react": "^17.0.0",
     "react-dom": "17.0.2",
     "terser-webpack-plugin": "5.1.3"
   },
