--- a/packages/social/ios/App/App/capacitor.config.json
+++ b/packages/social/ios/App/App/capacitor.config.json
@@ -1,8 +1,6 @@
 {
-	"appId": "com.xrengine.client",
-	"appName": "@xrengine/client",
-	"bundledWebRuntime": false,
-	"npmClient": "npm",
+	"appId": "com.xrengine.social",
+	"appName": "com.xrengine.social",
 	"webDir": "www",
 	"plugins": {
 		"SplashScreen": {
@@ -13,6 +11,5 @@
 		"hostname": "dev.arcmedia.us",
 		"androidScheme": "https",
 		"iosScheme": "https"
-	},
-	"cordova": {}
+	}
 }
