--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -39,15 +39,14 @@
     "@xrengine/engine": "^0.2.29",
     "app-root-path": "3.0.0",
     "prop-types": "15.7.2",
-    "react": "17.0.2",
+    "react": "^17.0.0",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-video-recorder": "3.18.2",
     "redux": "4.1.0",
     "sass": "1.35.1",
     "styled-components": "5.3.0",
-    "volumetric": "^0.2.21",
-    "webxr-native": "0.2.21"
+    "volumetric": "https://github.com/XRFoundation/UniversalVolumetric"
   },
   "devDependencies": {
     "@types/node": "14.17.4",
