--- a/packages/social/ios/App/App/capacitor.config.json
+++ b/packages/social/ios/App/App/capacitor.config.json
@@ -8,8 +8,9 @@
 		}
 	},
 	"server": {
-		"hostname": "dev.arcmedia.us",
+		"url": "https://dev.arcmedia.us",
 		"androidScheme": "https",
-		"iosScheme": "https"
+		"iosScheme": "https",
+        "allowNavigation": ["*.arcmedia.us"]
 	}
 }
