--- a/packages/social/android/app/capacitor.build.gradle
+++ b/packages/social/android/app/capacitor.build.gradle
@@ -9,6 +9,8 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
+    implementation project(':capacitor-share')
+    implementation project(':capacitor-app')
     implementation project(':webxr-native')
 
 }
