--- a/packages/social/android/capacitor.settings.gradle
+++ b/packages/social/android/capacitor.settings.gradle
@@ -2,5 +2,11 @@
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../../../node_modules/@capacitor/android/capacitor')
 
+include ':capacitor-share'
+project(':capacitor-share').projectDir = new File('../../../node_modules/@capacitor/share/android')
+
+include ':capacitor-app'
+project(':capacitor-app').projectDir = new File('../../../node_modules/@capacitor/app/android')
+
 include ':webxr-native'
 project(':webxr-native').projectDir = new File('../../../node_modules/webxr-native/android')
