--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@capacitor/android": "3.0.2",
+    "@capacitor/share":"1.0.2",
+    "@capacitor/app":"1.0.2",
     "@capacitor/cli": "3.0.2",
     "@capacitor/ios": "3.0.2",
     "@material-ui/core": "4.11.4",
