--- a/.github/workflows/publish-npm-packages.yml
+++ b/.github/workflows/publish-npm-packages.yml
@@ -30,14 +30,14 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       - run: git add .
       - run: git commit -m ${{ github.event.release.tag_name }}
-      - run: git push origin ${{ github.event.release.tag_name }}
+      - run: git push origin version-increment-${{ github.event.release.tag_name }}
       - uses: peter-evans/create-pull-request@v3
         with:
           committer: CI Bot <ci-bot@xrengine.io>
           title: v${{ github.event.release.tag_name }}
           body: Bump version to v${{ github.event.release.tag_name }}
           delete-branch: true
-          branch: ${{ github.event.release.tag_name }}
+          branch: version-increment-${{ github.event.release.tag_name }}
       - run: npm run publish-no-verify
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
