--- a/packages/social/ios/App/App/capacitor.config.json
+++ b/packages/social/ios/App/App/capacitor.config.json
@@ -11,6 +11,8 @@
 		"url": "https://dev.arcmedia.us",
 		"androidScheme": "https",
 		"iosScheme": "https",
-        "allowNavigation": ["*.arcmedia.us"]
+		"allowNavigation": [
+			"*.arcmedia.us"
+		]
 	}
 }
