--- a/packages/social/ios/App/Podfile
+++ b/packages/social/ios/App/Podfile
@@ -9,7 +9,8 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../../../node_modules/@capacitor/ios'
-
+  pod 'CapacitorShare', :path => '../../../../node_modules/@capacitor/share'
+  pod 'CapacitorApp', :path => '../../../../node_modules/@capacitor/app'
 end
 
 target 'App' do
