--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -57,6 +57,7 @@
     "three": "^0.129.0",
     "three-mesh-bvh": "^0.3.7",
     "three-physx": "^0.0.33",
+    "twitch-m3u8": "^1.1.4",
     "vite-xrengine": "2.2.4",
     "volumetric": "https://github.com/XRFoundation/UniversalVolumetric"
   },
