--- a/packages/social/ios/App/Podfile
+++ b/packages/social/ios/App/Podfile
@@ -11,6 +11,7 @@ def capacitor_pods
   pod 'CapacitorCordova', :path => '../../../../node_modules/@capacitor/ios'
   pod 'CapacitorShare', :path => '../../../../node_modules/@capacitor/share'
   pod 'CapacitorApp', :path => '../../../../node_modules/@capacitor/app'
+  pod 'WebxrNative', :path => '../../node_modules/webxr-native'
 end
 
 target 'App' do
