back to main branch vite, golf tests

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "build-publish": "lerna run --ignore @xrengine/client-ml --ignore @xrengine/docs --ignore @xrengine/social --ignore @xrengine/client --ignore @xrengine/server build-publish --parallel",
     "build-docker": "lerna run --ignore @xrengine/bot --ignore @xrengine/client-ml --ignore @xrengine/docs --ignore @xrengine/engine build --parallel",
     "update-name-gh-package": "lerna run update-name-gh-package",
-    "diff": "lerna diff"
+    "diff": "lerna diff",
+    "clean-node-modules": "rimraf node_modules && npx lerna exec npx rimraf node_modules"
   },
   "types": "lib/",
   "pre-push": [
