--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -57,7 +57,7 @@
     "cross-env": "7.0.3",
     "eslint": "7.29.0",
     "typescript": "4.3.4",
-    "vite-xrengine": "2.2.4"
+    "vite": "2.3.8"
   },
   "browser": {
     "fs": false
