--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -28,18 +28,20 @@ jobs:
           sudo rm -rf "/usr/local/share/boost"
           sudo rm -rf "$AGENT_TOOLSDIRECTORY"
       - name: Build Docker Image
-        run: bash scripts/build_docker.sh dev $DOCKER_LABEL
+        run: bash scripts/build_docker.sh dev $DOCKER_LABEL $AWS_REGION
         env:
           DOCKER_LABEL: ${{ secrets.DOCKER_LABEL }}
           REPO_NAME: ${{ secrets.REPO_NAME }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
           ECR_URL: ${{ secrets.ECR_URL }}
       - name: npm-install 'cli' and 'aws-sdk'
         run: npm install cli aws-sdk
       - name: Publish to Elastic Container Registry
-        run: bash scripts/publish_ecr.sh dev $GITHUB_SHA $DOCKER_LABEL
+        run: bash scripts/publish_ecr.sh dev $GITHUB_SHA $DOCKER_LABEL $AWS_REGION
         env:
           DOCKER_LABEL: ${{ secrets.DOCKER_LABEL }}
           REPO_NAME: ${{ secrets.REPO_NAME }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
           ECR_URL: ${{ secrets.ECR_URL }}
       - name: Deploy to EKS
         run: bash scripts/deploy.sh dev $GITHUB_SHA
