fix default APP_HOST in env.local.default

--- a/.env.local.default
+++ b/.env.local.default
@@ -17,7 +17,7 @@ CLIENT_ENABLED=true
 APP_TITLE=XREngine
 APP_LOGO=https://xrengine-static.s3-us-east-1.amazonaws.com/logo.png
 APP_URL=https://localhost:3000
-APP_HOST=localhost
+APP_HOST=localhost:3000
 APP_PORT=3000
 
 # Vite variables - Exposed to client side
