--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -11,6 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "jest": "ts-jest",
   "description": "A declarative way to build 3D/VR/AR/XR apps that scale. Built with tooling web developers will love, using conventions that game developers and creative coders will find straightforward familiar.",
   "homepage": "https://github.com/XRFoundation/XREngine#readme",
   "license": "MIT",
@@ -28,6 +29,7 @@
     "build": "rimraf dist && mkdir dist && ctix entrypoint ./src && node build.js",
     "build-publish": "rimraf dist && ctix entrypoint ./src && cross-env NODE_ENV=production rollup -c",
     "test": "jest",
+    "test:golf": "jest --testPathPattern=tests/golf",
     "validate": "npm run lint && npm run test",
     "generate-doc": "node_modules/.bin/typedoc",
     "update-name-gh-package": "node scripts/update-name-gh-package.js"
@@ -66,9 +68,18 @@
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
     "@rollup/plugin-typescript": "8.2.1",
+    "@types/expect-puppeteer": "4.4.5",
+    "@types/jest": "26.0.23",
+    "@types/jest-environment-puppeteer": "4.4.1",
+    "@types/puppeteer": "5.4.3",
     "@types/three": "0.129.2",
+    "@xrengine/bot": "^0.3.29",
     "esbuild": "0.12.14",
     "eslint": "7.30.0",
+    "jest": "27.0.6",
+    "jest-puppeteer": "5.0.4",
+    "puppeteer": "9.1.1",
+    "ts-jest": "27.0.3",
     "rollup": "2.52.7",
     "rollup-plugin-node-polyfills": "0.2.1",
     "rollup-plugin-scss": "3.0.0",
