Update ios projects files

--- a/packages/social/ios/App/App/capacitor.config.json
+++ b/packages/social/ios/App/App/capacitor.config.json
@@ -7,6 +7,9 @@
 			"launchShowDuration": 0
 		}
 	},
+	"ios": {
+		"limitsNavigationsToAppBoundDomains": true
+	},
 	"server": {
 		"url": "https://dev.arcmedia.us",
 		"allowNavigation": [
