--- a/packages/ops/xrengine/templates/game-server-ingress.yaml
+++ b/packages/ops/xrengine/templates/game-server-ingress.yaml
@@ -1,4 +1,4 @@
-{{- if ne .Values.gameserver.ingress.enabled "false" }}
+{{- if ne (.Values.gameserver.ingress.disabled | default "") "true" }}
 {{- $fullName := include "xrengine.gameserver.fullname" . -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
