Add CustomCAPBridgeViewController to Main.storyboard

--- a/packages/social/ios/App/App/capacitor.config.json
+++ b/packages/social/ios/App/App/capacitor.config.json
@@ -2,6 +2,7 @@
 	"appId": "com.xrengine.social",
 	"appName": "com.xrengine.social",
 	"webDir": "www",
+    "loggingBehavior": "none",
 	"plugins": {
 		"SplashScreen": {
 			"launchShowDuration": 0
