refactor basscoast event stuff, add dash player

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -45,6 +45,7 @@
     "browserfs": "^1.4.3",
     "cross-fetch": "^3.0.6",
     "ctix": "^0.3.1",
+    "dashjs": "^4.0.0-npm",
     "detect-browser": "^5.2.0",
     "draco3dgltf": "^1.4.1",
     "ethereal": "^2.0.4",
