Update volumetric package

--- a/packages/client-core/package.json
+++ b/packages/client-core/package.json
@@ -97,7 +97,7 @@
     "use-debounce": "7.0.0",
     "use-http": "1.0.21",
     "uuid": "8.3.2",
-    "volumetric": "https://github.com/XRFoundation/UniversalVolumetric",
+    "volumetric": "^0.2.24",
     "yup": "0.32.9"
   },
   "devDependencies": {
