Some progress, map adds into world and does something to camera but not rendering yet

--- a/.env.local.default
+++ b/.env.local.default
@@ -165,5 +165,5 @@ REDIS_PORT=6379
 # --------------------------------
 
 # Map-related Variables (Harp, Mapbox, etc) ---------------
-HARPGL_API_KEY="Ttss4aUB77Zt0zEDvFs-4kwmG6CbM58pV5unTlZrXMA"
+HARPGL_API_KEY=""
 # --------------------------------
