--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -47,7 +47,7 @@
     "redux": "4.1.0",
     "sass": "1.35.2",
     "styled-components": "5.3.0",
-    "volumetric": "https://github.com/XRFoundation/UniversalVolumetric",
+    "volumetric": "0.2.25",
     "webxr-native": "0.3.0"
   },
   "devDependencies": {
