--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -42,7 +42,9 @@
     "@here/harp-map-controls": "^0.25.0",
     "@here/harp-vectortile-datasource": "^0.25.0",
     "@here/harp.gl": "^0.25.0",
+    "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
+    "@turf/buffer": "^6.5.0",
     "@xrengine/common": "^0.3.31",
     "browserfs": "^1.4.3",
     "cross-fetch": "^3.0.6",
@@ -50,11 +52,13 @@
     "dashjs": "^4.0.0-npm",
     "detect-browser": "^5.2.0",
     "draco3dgltf": "^1.4.1",
+    "earcut": "^2.2.3",
     "ethereal": "^2.0.4",
     "hls.js": "^1.0.7",
     "idb-keyval": "^5.0.5",
     "lodash": "4.17.21",
     "mousetrap": "^1.6.5",
+    "pbf": "^3.2.1",
     "postprocessing": "^6.21.5",
     "react": "17.0.2",
     "socket.io": "4.1.3",
