--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -45,6 +45,7 @@
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
     "@turf/buffer": "^6.5.0",
+    "@types/earcut": "^2.1.1",
     "@xrengine/common": "^0.3.31",
     "browserfs": "^1.4.3",
     "cross-fetch": "^3.0.6",
