--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -36,10 +36,6 @@
   "dependencies": {
     "@capacitor/core": "3.1.1",
     "@feathersjs/client": "5.0.0-pre.4",
-    "@here/harp-geoutils": "^0.25.0",
-    "@here/harp-map-theme": "^0.25.0",
-    "@here/harp-mapview": "^0.25.0",
-    "@here/harp-vectortile-datasource": "^0.25.0",
     "@material-ui/core": "4.12.1",
     "@material-ui/icons": "4.11.2",
     "@material-ui/styles": "4.11.4",
@@ -55,6 +51,7 @@
     "browserfs": "1.4.3",
     "classnames": "2.3.1",
     "cross-blob": "3.0.0",
+    "dat": "^13.13.1",
     "draco3dgltf": "1.4.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "eventemitter3": "4.0.7",
