--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
   },
   "types": "lib/",
   "pre-push": [],
-  "pre-commit": ["lint"],
+  "pre-commit": [
+    "lint"
+  ],
   "resolutions": {
     "socket.io": "4.1.3",
     "terser": "^5.6.1",
@@ -103,6 +105,7 @@
     "supertest": "6.1.3"
   },
   "dependencies": {
-    "cli": "1.0.1"
+    "cli": "1.0.1",
+    "yuka": "^0.7.6"
   }
 }
