--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
   "devDependencies": {
     "@typescript-eslint/parser": "4.28.3",
     "bcrypt": "5.0.1",
+    "cli": "1.0.1",
+    "concurrently": "6.2.0",
     "esbuild": "0.12.15",
     "esbuild-plugin-sass": "0.5.2",
     "jest": "27.0.6",
@@ -108,9 +110,10 @@
     "pre-commit": "1.2.2",
     "pre-push": "0.1.1",
     "prettier": "2.3.2",
-    "cli": "1.0.1",
-    "concurrently": "6.2.0",
     "supertest": "6.1.3",
     "yuka": "0.7.6"
+  },
+  "dependencies": {
+    "three-stdlib": "^2.3.1"
   }
 }
