Updated content pack patch to invalidate Cloudfront cache.
Needed to invalidate Cloudfront cache on content-pack patch
for manifest.json, plus whatever files were updated.

--- a/.env.local.default
+++ b/.env.local.default
@@ -128,6 +128,7 @@ AWS_SMS_SENDER_ID=
 
 # - Cloud front
 STORAGE_CLOUDFRONT_DOMAIN=resources.xrengine.io
+STORAGE_CLOUDFRONT_DISTRIBUTION_ID=E3E9EQTR0OYMND
 
 # - S3
 STORAGE_S3_REGION=us-east-1
