--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^4.4.1"
   },
   "dependencies": {
+    "@hookstate/core": "^3.0.8",
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
     "@turf/buffer": "^6.5.0",
