--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -41,6 +41,7 @@
     "@xrengine/common": "^0.3.31",
     "@xrengine/engine": "^0.3.31",
     "app-root-path": "3.0.0",
+    "formik": "^2.2.9",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
