--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -72,6 +72,7 @@
     "@rollup/plugin-replace": "3.0.0",
     "@rollup/plugin-typescript": "8.2.3",
     "@types/expect-puppeteer": "4.4.6",
+    "@types/geojson": "^7946.0.8",
     "@types/jest": "26.0.24",
     "@types/jest-environment-puppeteer": "4.4.1",
     "@types/puppeteer": "5.4.4",
