--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -11,12 +11,11 @@
   },
   "npmClient": "npm",
   "jest": "ts-jest",
-  "main": "src/bot.js",
+  "main": "src/bot.ts",
   "scripts": {
-    "start": "node run-bot.js",
-    "validate": "npm run lint && npm run test",
-    "test": "echo \"TODO: Add Testing to Client\" && exit 0",
-    "golf": "jest"
+    "validate": "npm run test",
+    "dev": "node -r ts-eager/register src/run-bot.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@google-cloud/agones-sdk": "1.16.0",
