--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -29,7 +29,7 @@
     "build-publish": "rimraf dist && ctix entrypoint ./src && cross-env NODE_ENV=production rollup -c",
     "test": "jest",
     "test:golf": "jest --testPathPattern=tests/golf",
-    "validate": "npm run lint && npm run test",
+    "validate": "npm run test",
     "generate-doc": "node_modules/.bin/typedoc",
     "update-name-gh-package": "node scripts/update-name-gh-package.js"
   },
@@ -42,6 +42,7 @@
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
     "@turf/buffer": "^6.5.0",
+    "@xrengine/bot": "^0.3.31",
     "@xrengine/common": "^0.3.31",
     "browserfs": "^1.4.3",
     "cross-fetch": "^3.0.6",
