--- a/packages/gameserver/package.json
+++ b/packages/gameserver/package.json
@@ -39,7 +39,7 @@
     "dev": "nodemon -r ts-eager/register src/index.ts",
     "dev-nossl": "cross-env NOSSL=true ts-eager src/index.ts",
     "test": "echo \"TODO: no test specified\" && exit 0",
-    "validate": "npm run lint && npm run build && npm run test",
+    "validate": "npm run build && npm run test",
     "precommit": "no-master-commits -b master,dev"
   },
   "types": "lib/",
