--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -43,7 +43,7 @@
     "test": "echo \"TODO: no test specified\" && exit 0",
     "build-publish": "rimraf dist && ctix entrypoint ./src && cross-env NODE_ENV=production rollup -c",
     "localbuild": "cross-env LOCAL_BUILD=true npm run start",
-    "validate": "npm run lint && npm run build && npm run test",
+    "validate": "npm run build && npm run test",
     "precommit": "no-master-commits -b master,dev",
     "upload-avatar": "node ./scripts/upload-avatar.js",
     "serve-local-files": "http-server ./upload --ssl --cert ../../certs/cert.pem --key ../../certs/key.pem --port 8642 --cors=*",
