--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -43,7 +43,7 @@
     "dev-reinit-db": "cross-env FORCE_DB_REFRESH=true ts-eager src/index.ts",
     "dev-reinit-db-windows": "concurrently -i \"cross-env NODE_ENV=development FORCE_DB_REFRESH=true nodemon --watch src/** -r ts-eager/register src/index.ts\" \"cd ../gameserver && cross-env NODE_ENV=development nodemon --watch src/** -r ts-eager/register src/index.ts\"",
     "test": "echo \"TODO: no test specified\" && exit 0",
-    "validate": "npm run lint && npm run build && npm run test",
+    "validate": "npm run build && npm run test",
     "precommit": "no-master-commits -b master,dev",
     "upload-avatar": "node ./scripts/upload-avatar.js",
     "serve-local-files": "http-server ./upload --ssl --cert ../../certs/cert.pem --key ../../certs/key.pem --port 8642 --cors=*"
