--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "cross-env NODE_ENV=production NODE_OPTIONS=--max_old_space_size=4096 vite build && cp src/server.js www/server.js",
-    "validate": "npm run lint && npm run test",
+    "validate": "npm run test",
     "start": "cp src/server.js www/server.js && node www/server.js"
   },
   "resolutions": {
