--- a/packages/social/package.json
+++ b/packages/social/package.json
@@ -33,6 +33,8 @@
     "@capacitor/cli": "3.1.2",
     "@capacitor/ios": "3.1.2",
     "@capacitor/share": "1.0.3",
+    "@capacitor/filesystem": "1.0.2",
+    "@capacitor-community/http": "1.1.0",
     "@material-ui/core": "4.12.2",
     "@types/react-redux": "7.1.18",
     "@xrengine/client-core": "^0.3.31",
