Integration Tests Run the Development Stack (#2532)
* integration tests run the development stack

* clean up

--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "check-errors": "lerna run check-errors --ignore @xrengine/server --ignore @xrengine/server-core --parallel",
     "start": "npm run dev",
     "dev": "npm run dev-docker && concurrently npm:dev-agones npm:dev-server npm:dev-client",
-    "dev-docker": "cd scripts && docker-compose up -d",
+    "dev-docker": "cd scripts && sudo docker-compose up -d",
     "dev-agones": "cd scripts && ./start-agones.sh",
     "dev-server": "cd packages/server && npm run dev",
     "dev-client": "cd packages/client && npm run dev",
     "dev-reinit": "cd packages/server && npm run dev-reinit-db",
     "dev-nginx": "",
-    "test": "jest",
-    "test:golf": "jest --testPathPattern=tests/golf",
+    "test": "jest --detectOpenHandles",
+    "cleanup-tests": "node tests/cleanup-tests.js",
+    "test:golf": "jest --testPathPattern=tests/golf --detectOpenHandles",
     "lint": "prettier --check \"packages/*/src/**/*.{ts,tsx}\"",
     "format": "prettier --write \"packages/*/src/**/*.{ts,tsx}\"",
     "version-increment": "lerna version --conventional-commits --yes",
@@ -108,6 +109,7 @@
     "esbuild-plugin-sass": "0.5.2",
     "jest": "27.0.6",
     "jest-puppeteer": "5.0.4",
+    "kill-port": "^1.6.1",
     "lerna": "4.0.0",
     "pre-commit": "1.2.2",
     "pre-push": "0.1.1",
