--- a/.env.local.default
+++ b/.env.local.default
@@ -60,6 +60,7 @@ SERVER_PUBLIC_DIR=
 PERFORM_DRY_RUN=false
 STORAGE_PROVIDER=local
 LOCAL_STORAGE_PROVIDER=localhost:8642
+LOCAL_STORAGE_PROVIDER_PORT=8642
 GOOGLE_ANALYTICS_TRACKING_ID=
 HUB_ENDPOINT=https://xrengine.io
 # --------------------------------
