set up tests for all packages

--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "dev-client": "cd packages/client && npm run dev",
     "dev-reinit": "cd packages/server && npm run dev-reinit-db",
     "dev-nginx": "",
-    "test": "jest --detectOpenHandles",
     "cleanup-tests": "node tests/cleanup-tests.js",
+    "test": "jest --detectOpenHandles && lerna run test",
     "test:golf": "cross-env TEST_LOCATION_NAME=golftest jest --testPathPattern=tests/golf --detectOpenHandles",
     "lint": "prettier --check \"packages/*/src/**/*.{ts,tsx}\"",
     "format": "prettier --write \"packages/*/src/**/*.{ts,tsx}\"",
