--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,7 @@
     "offline": "cross-env NODE_ENV=offline node --max-old-space-size=4096 ./index.js --port 3000",
     "start": "cp src/server.js dist/server.js && node dist/server.js",
     "validate": "npm run test",
-    "test": "echo \"TODO: Add Testing to Client\" && exit 0",
+    "test": "jest",
     "localbuild": "cross-env LOCAL_BUILD=true npm run build && npm run start"
   },
   "resolutions": {
