--- a/packages/gameserver/package.json
+++ b/packages/gameserver/package.json
@@ -38,7 +38,7 @@
     "mappa": "cross-env NODE_ENV=production ts-eager src/mappa.ts",
     "dev": "nodemon -r ts-eager/register src/index.ts",
     "dev-nossl": "cross-env NOSSL=true ts-eager src/index.ts",
-    "test": "echo \"TODO: no test specified\" && exit 0",
+    "test": "jest",
     "validate": "npm run build && npm run test",
     "precommit": "no-master-commits -b master,dev"
   },
