revert making tsconfig strict

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": false,
     "module": "esnext",
-    "strict": true,
-    "noImplicitAny": true,
+    "strict": false,
+    "noImplicitAny": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
